# VPk04.1

./: .gitignore  DEMO_VIDEO.md  Dockerfile  EnvExample  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  llm.py  main.py  models.py  rate_limit.py  safety.py  security.py  spool.py  storage.py
data/samples/: tickets_60.csv
deploy/: install-on-server.sh  post_deploy.sh  setup-https.sh  update_from_git.sh
deploy/nginx/: okihit.online.conf
scripts/: export_response_log.py  seed_from_csv.py
static/: index.html
tests/: conftest.py  test_api.py  test_llm.py  test_safety.py  test_storage.py
